changed @media screen to just @media to test a bug (query not working on mobile device)

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -82,7 +82,7 @@ img {
             border-radius: 8px;
 }
 
-@media screen and (max-width: 480px) {
+@media (max-width: 480px) {
 
     .btn-xlarge {
       text-decoration: none !important;
